--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h2>Projects</h2>
               <p>
-                I'm interested in computer vision, machine learning, optimization, graphics and robotics.
+                I'm interested in computer vision, deep/machine learning, optimization and robotics.
               </p>
             </td>
           </tr>
@@ -64,11 +64,32 @@
           <tbody>
 
              <tr>
+
+               <tr>
+                <td style="padding:2.5%;width:25%;vertical-align:middle;min-width:120px">
+                  <img src="images/agriculture.jpg" alt="project image" style="width:auto; height:auto; max-width:100%;">
+                </td>
+                <td style="padding:2.5%;width:75%;vertical-align:middle">
+                  <h3>Deep learning in agriculture</h3>
+                  <br>
+                  <em>Project ,</em>
+                  2021
+                  <br>
+                  <!-- <a href="#">pdf</a> / <a href="#">github</a>   -->
+                  <p></p>
+                  <p>Applying the deep learning, in corps detection</p>
+                </td>
+              </tr>
+
+
                 <td style="padding:2.5%;width:25%;vertical-align:middle;min-width:120px">
                   <img src="images/faster-rnn.png" alt="project image" style="width:auto; height:auto; max-width:100%;">
                 </td>
                 <td style="padding:2.5%;width:75%;vertical-align:middle">
                   <h3>Faster R-CNN</h3>
+                  <br>
+                  <em>Project ,</em>
+                  2021
                   <br>
                   <!-- <a href="#">pdf</a> / <a href="#">github</a>   -->
                   <p></p>
@@ -81,7 +102,7 @@
                   <img src="images/deepfake.jpg" alt="project image" style="width:auto; height:auto; max-width:100%;">
                 </td>
                 <td style="padding:2.5%;width:75%;vertical-align:middle">
-                  <h3>deep fake detector</h3>
+                  <h3>Deep fake detector</h3>
                   <br>
                   <!-- <a href="#">pdf</a> / --> <a href="https://github.com/aaiit/Fake-image-detector">github</a>  
                   <p></p>
@@ -103,26 +124,14 @@
                 </td>
               </tr>
 
-              <tr>
-                <td style="padding:2.5%;width:25%;vertical-align:middle;min-width:120px">
-                  <img src="images/agriculture.jpg" alt="project image" style="width:auto; height:auto; max-width:100%;">
-                </td>
-                <td style="padding:2.5%;width:75%;vertical-align:middle">
-                  <h3>Deep learning in agriculture</h3>
-                  <br>
-                  <!-- <a href="#">pdf</a> / <a href="#">github</a>   -->
-                  <p></p>
-                  <p>Applying the deep learning, in corps detection</p>
-                </td>
-              </tr>
-
+             
 
                 <tr>
                 <td style="padding:2.5%;width:25%;vertical-align:middle;min-width:120px">
                   <img src="images/shameleon.jpg" alt="project image" style="width:auto; height:auto; max-width:100%;">
                 </td>
                 <td style="padding:2.5%;width:75%;vertical-align:middle">
-                  <h3>Shameleon</h3>
+                  <h3>Chameleon</h3>
                   <br>
                   <!-- <a href="#">pdf</a> /  --><a href="https://github.com/aaiit/Shameleon">github</a>  
                   <p></p>
