--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h2>Projects</h2>
               <p>
-                I'm interested in computer vision, deep/machine learning, optimization and robotics.
+                I'm interested in computer vision, deep/machine learning, optimization and image processing, and robotics.
               </p>
             </td>
           </tr>
@@ -106,7 +106,7 @@
                   <br>
                   <!-- <a href="#">pdf</a> / --> <a href="https://github.com/aaiit/Fake-image-detector">github</a>  
                   <p></p>
-                  <p> Buil a model based on svm aim to detect the real from fake image</p>
+                  <p> Build a model based on svm aim to detect the real from fake image</p>
                 </td>
               </tr>
 
@@ -120,7 +120,7 @@
                   <br>
                   <!-- <a href="#">pdf</a> / --> <a href="https://github.com/aaiit/Objects-Detection-and-Recognition">github</a>  
                   <p></p>
-                  <p> Buil a model based on svm aim to segmentate and recognize objected using the <a href="https://www.kaggle.com/zaraks/pascal-voc-2007">Pascal voc 2007</a> dataset.</p>
+                  <p> Buil a model based on svm aim to segmentate and recognize objects. we use the <a href="https://www.kaggle.com/zaraks/pascal-voc-2007">Pascal voc 2007</a> dataset to train the model.</p>
                 </td>
               </tr>
 
@@ -151,9 +151,9 @@
           <tbody><tr>
             <td style="padding:0px">
               <br>
-              <!-- <p style="text-align:center;font-size:small;">
+              <p style="text-align:center;font-size:small;">
                 Design and source code from <a style="font-size:small;" href="https://jonbarron.info/">Jon Barron's website</a>
-              </p> -->
+              </p>
             </td>
           </tr>
         </tbody></table>
