--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <img style="width:100%;max-width:100%" alt="profile photo" src="man.svg">
+              <img style="width:100%;max-width:100%" alt="profile photo" src="man.jpeg">
             </td>
           </tr>
         </tbody></table>
